force-app/main/default/objects/VG_Functionality_Switches__c/VG_Functionality_Switches__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Functionality Switches</label>
</CustomObject>