force-app/main/default/objects/VG_Functionality_Switches__c/fields/Allow_Booked_Policy_Status_Update__c.field-meta.xml
<CustomField>
    <fullName>Allow_Booked_Policy_Status_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Booked Policy Status Update</label>
    <type>Checkbox</type>
</CustomField>