force-app/main/default/objects/VG_Functionality_Switches__c/fields/Compliance_Check__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Compliance Check</label>
    <type>Checkbox</type>
</CustomField>