force-app/main/default/objects/VG_Functionality_Switches__c/fields/Edison_Financials__c.field-meta.xml
<CustomField>
    <fullName>Edison_Financials__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Edison Financials</label>
    <type>Checkbox</type>
</CustomField>